[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyehicle"
version = "0.1.0"
description = "A Python Library for GPS Trajectory Processing and Reconstruction"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nick Doulos", email = "contact@nickdoulos.com"}
]
maintainers = [
    {name = "Nick Doulos", email = "contact@nickdoulos.com"}
]
keywords = [
    "gps",
    "trajectory",
    "map-matching",
    "road-network",
    "trajectory-reconstruction",
    "geospatial",
    "location-data",
    "reconstruction"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pyproj>=3.0.0",
    "shapely>=1.8.0",
    "igraph>=0.9.0",
    "rtree>=0.9.0",
    "scikit-learn>=1.0.0",
    "osmium>=3.0.0",
    "folium>=0.12.0",
    "matplotlib>=3.3.0",
    "branca>=0.4.0",
    "requests>=2.25.0",
    "geopandas>=0.10.0",
    "pyrosm>=0.6.0",
    "polars>=0.15.0",
    "numba>=0.55.0",
    "leuvenmapmatching>=1.0.0",
    "osmnx>=1.1.0",
    "tqdm>=4.60.0",
]

[project.urls]
Homepage = "https://github.com/Nick-Doulos/pyehicle"
Documentation = "https://github.com/Nick-Doulos/pyehicle#readme"
Repository = "https://github.com/Nick-Doulos/pyehicle"
Issues = "https://github.com/Nick-Doulos/pyehicle/issues"

[tool.setuptools]
packages = ["pyehicle", "pyehicle.reconstructing", "pyehicle.utilities", "pyehicle.preprocessing"]

[tool.setuptools.package-data]
pyehicle = ["py.typed"]

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311", "py312", "py313", "py314"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=pyehicle --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
